상용화와 비교해서 어색한 부분 수정